--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body class="bg-white">
-    <div class="container mx-auto my-16 px-4 py-8 max-w-6xl">
+    <div class="container mx-auto my-16 px-4 py-8 max-w-7xl">
       <!-- Header -->
       <header class="text-center mb-16">
         <h1 class="text-5xl text-black mb-4 font-kumincho">
@@ -37,7 +37,7 @@
       </header>
 
       <!-- Main Content -->
-      <main class="grid grid-cols-1 sm:grid-cols-4 gap-0">
+      <main class="grid grid-cols-1 sm:grid-cols-3 gap-0">
         <!-- Dataset Description -->
         <section class="col-span-1 bg-white rounded-lg">
           <div class="bg-white rounded-lg text-center my-12">
@@ -67,8 +67,7 @@
               Total Duration
             </h3>
             <p class="text-lg font-semibold m-4 text-black">
-              66.02 個鐘（3961.17 分鐘）<br />
-              66.02 hours (3961.17 minutes)
+              66.02 個鐘 hours <br />（3960.67 分鐘 minutes
             </p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
@@ -76,7 +75,7 @@
               總字數（含標點） <br />
               Total Characters # (including punctuation)
             </h3>
-            <p class="text-lg font-semibold m-4 text-black">985,989</p>
+            <p class="text-lg font-semibold m-4 text-black">946021</p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
             <h3 class="text-2xl text-gray-500">
@@ -87,9 +86,9 @@
           </div>
         </section>
         <!-- Dataset Stats -->
-        <section class="col-span-3 mb-12">
+        <section class="col-span-2 mb-12">
           <h2 class="text-3xl my-8">介紹 Introduction</h2>
-          <p class="text-gray-700 text-lg mb-4">
+          <p class="text-gray-700 text-xl mb-4">
             本數據集由廣州最出名嘅話劇演員、説書藝人（講古佬）張悦楷講《三國演義》錄音製成。所有錄音均錄於
             1980
             年代。數據集所有文本均由人工轉寫，並根據《三國演義》原文校對嚟確保準確性。
@@ -257,7 +256,7 @@ git checkout</code></pre>
                   總時長 Total Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  66.02 個鐘 hours（3961.17 分鐘 minutes）
+                  66.01 個鐘 hours（3960.67 分鐘 minutes）
                 </td>
               </tr>
               <tr>
@@ -265,7 +264,7 @@ git checkout</code></pre>
                   平均音頻時長 Average Clip Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  6.071 秒 seconds
+                  6.064 秒 seconds
                 </td>
               </tr>
               <tr>
@@ -273,7 +272,7 @@ git checkout</code></pre>
                   中位音頻時長 Median Clip Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  5.6 秒 seconds
+                  5.605 秒 seconds
                 </td>
               </tr>
               <tr>
@@ -289,7 +288,7 @@ git checkout</code></pre>
                   最長音頻時長 Max Clip Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  100.268 秒 seconds
+                  31.822 秒 seconds
                 </td>
               </tr>
               <tr>
@@ -298,7 +297,7 @@ git checkout</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  24.01
+                  23.99
                 </td>
               </tr>
               <tr>
@@ -307,7 +306,7 @@ git checkout</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  23
+                  23.0
                 </td>
               </tr>
               <tr>
@@ -316,7 +315,7 @@ git checkout</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  985989
+                  946021
                 </td>
               </tr>
               <tr>
@@ -324,7 +323,7 @@ git checkout</code></pre>
                   覆蓋漢字數 Unique Chinese Characters #
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  3993
+                  3988
                 </td>
               </tr>
               <tr>
@@ -367,6 +366,27 @@ git checkout</code></pre>
     year={2025}
 }</pre
           >
+
+          <h2 class="text-3xl my-12">意見反饋 Feedback</h2>
+          <p class="text-gray-700 text-lg my-4">
+            數據集建設難免有疏漏，如果你發現有任何錯誤、問題，或者有任何意見，歡迎喺
+            <a
+              class="underline"
+              href="https://huggingface.co/datasets/laubonghaudoi/zoengjyutgaai_saamgwokjinji/discussions"
+            >
+              Hugging Face 討論區 </a
+            >提出。
+          </p>
+          <p class="text-gray-700 text-lg my-4">
+            Dataset construction is inevitably flawed. If you find any errors,
+            problems, or have any suggestions, feel free to raise them in the
+            <a
+              class="underline"
+              href="https://huggingface.co/datasets/laubonghaudoi/zoengjyutgaai_saamgwokjinji/discussions"
+            >
+              Hugging Face discussion forum</a
+            >.
+          </p>
         </section>
       </main>
 
