--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="張悦楷講古語音數據集 - The Zoeng Jyut Gaai Storytelling Voice Dataset. A high-quality, artistic and expressive Cantonese speech dataset for TTS, ASR, LLM, and linguistic analysis."
+    />
+    <meta
+      name="keywords"
+      content="Cantonese, linguistics, TTS, ASR, LLM, speech synthesis, speech recognition, language model, Yue Chinese, Cantonese Chinese, 粵語, 廣東話, 張悦楷, 講古語音, 講古佬, 講古, 語音數據集, Cantonese voice dataset, open-source, public domain, CC0"
+    />
+    <meta name="author" content="張悦楷" />
     <link rel="icon" href="zoengjyutgaai.webp" type="image/webp" />
     <title>張悦楷講古語音數據集</title>
     <script src="https://cdn.tailwindcss.com"></script>
