修正下載方法

--- a/index.html
+++ b/index.html
@@ -202,13 +202,20 @@
           </p>
           <pre
             class="text-nowrap p-4 bg-gray-100 overflow-auto my-4"
-          ><code>git clone --filter=blob:none --sparse https://huggingface.co/datasets/CanCLID/zoengjyutgaai_saamgwokjinji
-
+          ><code>mkdir zoengjyutgaai_saamgwokjinji
 cd zoengjyutgaai_saamgwokjinji
+git init
 
+git remote add origin https://huggingface.co/datasets/CanCLID/zoengjyutgaai_saamgwokjinji
 git sparse-checkout init --cone
+
+# 指定凈係下載個別路徑
+# Tell git which directory you want
 git sparse-checkout set wav
-git checkout</code></pre>
+
+# 開始下載
+# Pull the content
+git pull origin main</code></pre>
           <p class="text-gray-700 text-xl my-4">
             所有文字轉寫都喺 <code>wav/metadata.csv</code>入面。
           </p>
