--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ git pull origin main</code></pre>
               <i class="fab fa-github text-2xl"></i>
             </a>
             <a
-              href="https://twitter.com/CanCLID"
+              href="https://twitter.com/Can_CLID"
               target="_blank"
               class="text-gray-600 hover:text-black"
               title="Twitter"
