--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               Total Duration
             </h3>
             <p class="text-lg font-semibold m-4 text-black">
-              66.02 個鐘 hours <br />（3960.67 分鐘 minutes）
+              66.01 個鐘 hours <br />（3960.73 分鐘 minutes）
             </p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
@@ -106,7 +106,7 @@
               總字數（含標點） <br />
               Total Characters # (including punctuation)
             </h3>
-            <p class="text-lg font-semibold m-4 text-black">946021</p>
+            <p class="text-lg font-semibold m-4 text-black">946176</p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
             <h3 class="text-2xl text-gray-500">
@@ -291,7 +291,7 @@ git pull origin main</code></pre>
                   總時長 Total Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  66.01 個鐘 hours（3960.67 分鐘 minutes）
+                  66.01 個鐘 hours（3960.73 分鐘 minutes）
                 </td>
               </tr>
               <tr>
@@ -299,7 +299,7 @@ git pull origin main</code></pre>
                   平均音頻時長 Average Clip Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  6.064 秒 seconds
+                  6.065 秒 seconds
                 </td>
               </tr>
               <tr>
@@ -307,7 +307,7 @@ git pull origin main</code></pre>
                   中位音頻時長 Median Clip Duration
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  5.605 秒 seconds
+                  5.606 秒 seconds
                 </td>
               </tr>
               <tr>
@@ -332,7 +332,7 @@ git pull origin main</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  23.99
+                  24.00
                 </td>
               </tr>
               <tr>
@@ -341,7 +341,7 @@ git pull origin main</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  23.0
+                  23
                 </td>
               </tr>
               <tr>
@@ -350,15 +350,24 @@ git pull origin main</code></pre>
                   punctuation)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  946021
+                  946176
                 </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  覆蓋漢字數 Unique Chinese Characters #
+                  覆蓋漢字數 Unique Chinese Characters Coverage
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   3988
+                </td>
+              </tr>
+              <tr>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  平均語速（含標點） Average Speaking Rate (including
+                  punctuation)
+                </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  3.98 字/秒 characters per second
                 </td>
               </tr>
               <tr>
