--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@ git pull origin main</code></pre>
                   中位每句字數，含標點 Median Characters Per Clip, including
                   punctuation
                 </td>
-                <td class="border px-4 py-2 border-black border-0 text-lg"></td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  23
+                </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   23
                 </td>
